welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: '=' expected but ';' found.
  var indexMax=0
^